# StabilityPreservation

./: LICENSE  README.md
FEEC-C++/: .gitignore  CMakeLists.txt  Jenkinsfile
FEEC-C++/doc/pages/: mainpage.dox
FEEC-C++/example_parameters/: prm_ned_rt_test-01.in  prm_ned_rt_test-03.in  prm_q_ned_test-02.in  prm_q_test-01.in  prm_rt_dq_test-01.in
FEEC-C++/include/: config.h
FEEC-C++/include/Ned_RT/: ned_rt_global.h  ned_rt_post_processor.h
FEEC-C++/include/Q/: q_global.h  q_post_processor.h  q_ref.h
FEEC-C++/include/Q_Ned/: q_ned_parameters.h  q_ned_post_processor.h
FEEC-C++/include/RT_DQ/: rt_dq_post_processor.h
FEEC-C++/include/equation_data/: eqn_coeff_A.h  eqn_exact_solution_lin.h  eqn_rhs.h
FEEC-C++/include/functions/: basis_nedelec_curl.h  basis_nedelec_curl.tpp  basis_q1.h  basis_q1_grad.h  basis_raviart_thomas.h  concatinate_functions.h  concatinate_functions.tpp  my_mapping_q1.h  my_mapping_q1.tpp
FEEC-C++/include/linear_algebra/: approximate_inverse.h  approximate_schur_complement.tpp  schur_complement.h
FEEC-C++/include/trunk/: scalar_shape_function.h  scalar_shape_function_grad.h  test_function.h  vector_shape_function.h  vector_shape_function_curl.tpp  vector_shape_function_div.h
FEEC-C++/include/vector_tools/: my_vector_tools.h
FEEC-C++/source/: main_q_ned.cxx
FEEC-C++/source/Ned_RT/: ned_rt_global.cc  ned_rt_parameters.cc  ned_rt_post_processor.cc  ned_rt_ref.cc
FEEC-C++/source/Q/: q_parameters.cc
FEEC-C++/source/Q_Ned/: q_ned_basis.cc  q_ned_global.cc
FEEC-C++/source/RT_DQ/: rt_dq_basis.cc  rt_dq_parameters.cc  rt_dq_post_processor.cc  rt_dq_ref.cc
FEEC-C++/source/equation_data/: eqn_coeff_A.cc  eqn_coeff_B.cc  eqn_coeff_R.cc
FEEC-C++/source/functions/: basis_nedelec_curl.inst.cc
FEEC-C++/test/: test_fe_projection_nedelec_mpi.cc  test_fe_projection_nedelec_mpi.mpirun=1.output
Kepler-Julia/: explEuler.jl
NonFEEC-C++/: README.md
NonFEEC-C++/contrib/utilities/: indent_common.sh
NonFEEC-C++/doc/: Doxyfile
NonFEEC-C++/example_parameters/: prm_ned_rt_test-02.in  prm_ned_rt_test-04.in  prm_q_ned_test-01.in  prm_q_ned_test-03.in  prm_q_ned_test-04.in
NonFEEC-C++/include/: my_other_tools.h
NonFEEC-C++/include/Ned_RT/: ned_rt_basis.h  ned_rt_parameters.h  ned_rt_ref.h
NonFEEC-C++/include/Q/: q_basis.h  q_parameters.h
NonFEEC-C++/include/Q_Ned/: q_ned_basis.h  q_ned_global.h  q_ned_ref.h
NonFEEC-C++/include/RT_DQ/: rt_dq_basis.h  rt_dq_global.h  rt_dq_parameters.h  rt_dq_ref.h
NonFEEC-C++/include/equation_data/: eqn_boundary_vals.h  eqn_coeff_B.h  eqn_coeff_R.h
NonFEEC-C++/include/functions/: basis_nedelec.h  basis_nedelec.tpp  basis_q1.tpp  basis_q1_grad.tpp  basis_raviart_thomas.tpp
NonFEEC-C++/include/linear_algebra/: approximate_inverse.tpp  approximate_schur_complement.h  inverse_matrix.h  inverse_matrix.tpp  preconditioner.h  schur_complement.tpp
NonFEEC-C++/include/trunk/: scalar_shape_function.tpp  scalar_shape_function_grad.tpp  vector_shape_function.tpp  vector_shape_function_curl.h  vector_shape_function_div.tpp
NonFEEC-C++/include/vector_tools/: my_vector_tools.tpp
NonFEEC-C++/source/: CMakeLists.txt  main_ned_rt.cxx  main_q.cxx  main_rt_dq.cxx  my_other_tools.cc
NonFEEC-C++/source/Ned_RT/: ned_rt_basis.cc
NonFEEC-C++/source/Q/: q_basis.cc  q_global.cc  q_post_processor.cc  q_ref.cc
NonFEEC-C++/source/Q_Ned/: q_ned_parameters.cc  q_ned_post_processor.cc  q_ned_ref.cc
NonFEEC-C++/source/RT_DQ/: rt_dq_global.cc
NonFEEC-C++/source/equation_data/: eqn_boundary_vals.cc  eqn_exact_solution_lin.cc  eqn_rhs.cc
NonFEEC-C++/source/functions/: basis_nedelec.inst.cc  basis_q1.inst.cc  basis_q1_grad.inst.cc  basis_raviart_thomas.inst.cc  my_mapping_q1.inst.cc
NonFEEC-C++/source/trunk/: test_function.cc
NonFEEC-C++/source/vector_tools/: my_vector_tools.inst.cc
NonFEEC-C++/test/: CMakeLists.txt  test_fe_projection_nedelec_mpi.mpirun=2.output
